--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "autoprefixer": "^10.4.16",
         "axios": "^1.6.1",
         "laravel-vite-plugin": "^1.0.0",
+        "lodash": "^4.17.21",
         "postcss": "^8.4.32",
         "sass": "^1.69.5",
         "tailwindcss": "^3.4.0",
